Creating the navbar in HTML

--- a/Client/Pages/Public/Index.razor
+++ b/Client/Pages/Public/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 
-@*navbar*@
+
+<Client.Component.Public.Shared.Navbar /> @*llamo la pagina de navbar de razor*@
 
 <main class="d-flex flex-column w-100 min-vh-90 justify-content-center align-items-center overflow-auto bg-motherboard-dev">
     <div class="containe g-0">
