--- a/Client/Pages/Public/Blog.razor
+++ b/Client/Pages/Public/Blog.razor
@@ -2,6 +2,8 @@
 
 <Client.Component.Public.Shared.Navbar />
 <h3>Blog</h3>
+
+<Client.Component.Public.Shared.Footer /> @*llamo la pagina de footer de razor*@
 @code {
 
 }
