--- a/Client/Component/Public/Shared/Navbar.razor
+++ b/Client/Component/Public/Shared/Navbar.razor
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="@HomePageUri" class="btn-link mx-5 md-and-smaller-my-3 @(IsPageActive(HomePageUri) ? "active" :string.Empty)">Home</a>
+                <a href="@HomePageUri" class="text-decoration-none btn-link mx-5 md-and-smaller-my-3 @(IsPageActive(HomePageUri) ? "active" :string.Empty)">Home</a>
             </li>
              <li class="nav-item">
-                <a href="@BlogPageUri" class="btn-link mx-5 md-and-smaller-my-3 @(IsPageActive(BlogPageUri) ? "active" :string.Empty)">Blog</a>
+                <a href="@BlogPageUri" class="text-decoration-none btn-link mx-5 md-and-smaller-my-3 @(IsPageActive(BlogPageUri) ? "active" :string.Empty)">Blog</a>
             </li>
          </ul>
     </div>
