--- a/Client/Component/Public/Shared/Navbar.razor
+++ b/Client/Component/Public/Shared/Navbar.razor
@@ -6,15 +6,21 @@
     <button class="navbar-toggler mx-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="@HomePageUri" class="text-decoration-none btn-link mx-5 md-and-smaller-my-3 @(IsPageActive(HomePageUri) ? "active" :string.Empty)">Home</a>
+                <a href="@HomePageUri" class="nav-link mx-5 md-and-smaller-my-3 @(IsPageActive(HomePageUri) ? "active" : string.Empty)">
+                    Home
+                </a>
             </li>
-             <li class="nav-item">
-                <a href="@BlogPageUri" class="text-decoration-none btn-link mx-5 md-and-smaller-my-3 @(IsPageActive(BlogPageUri) ? "active" :string.Empty)">Blog</a>
+
+            <li class="nav-item">
+                <a href="@BlogPageUri" class="nav-link mx-5 md-and-smaller-my-3 @(IsPageActive(BlogPageUri) ? "active" : string.Empty)">
+                    Blog
+                </a>
             </li>
-         </ul>
+        </ul>
     </div>
 </nav>
 
