--- a/Client/Component/Public/Shared/Navbar.razor.css
+++ b/Client/Component/Public/Shared/Navbar.razor.css
@@ -1,4 +1,4 @@
-﻿.nav-link {
+﻿﻿.nav-link {
     padding: 0.25rem 0;
     font-weight: 700;
     font-size: 1.25rem;
@@ -14,8 +14,7 @@
     border-radius: 0px;
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.nav-link:hover, .nav-link:focus {
     color: rgba(0, 0, 0, 0.85);
     border-bottom: 0.5rem solid transparent;
     border-bottom-color: rgba(0, 0, 0, 0.4);
