--- a/Client/Component/Public/Shared/Footer.razor
+++ b/Client/Component/Public/Shared/Footer.razor
@@ -1,12 +1,12 @@
-﻿<footer class="container-fluid p-4 sahdow-no-hover">
+﻿<footer class="container-fluid p-4 shadow-no-hover">
     <div class="ps-3 P-2 text-center">
         <p class="fw-bold m-0">Other places you can find me</p>
     </div>
     <div class="d-flex flex-row w-100 justify-content-center"> 
-        <a href="https://github.com/Dlanor91" target="_blank" class="text-dark f-size-3 mx-2 mx-lg-4">
+        <a href="https://github.com/Dlanor91" target="_blank" class="text-dark f-size-3 mx-2 mx-lg-2">
             <i class="fab fa-github-square"></i>
         </a>@*con ese target se me abre en una nueva pestaña*@
-        <a href="https://www.linkedin.com/in/ronald-lima-715b8692/" target="_blank" class="text-dark f-size-3 mx-1 mx-lg-1">
+        <a href="https://www.linkedin.com/in/ronald-lima-715b8692/" target="_blank" class="text-dark f-size-3 mx-1 mx-lg-2">
             <i class="fab fa-linkedin"></i>
         </a>
     </div>
